fix teh shifting of the tests when filter is on

--- a/src/styles/pages/views/Tests.css
+++ b/src/styles/pages/views/Tests.css
@@ -158,6 +158,16 @@ body {
   table-layout: fixed;
 }
 
+.table--tests .table__header-cell,
+.table--tests .table__cell {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.table--tests .table__cell {
+  white-space: nowrap;
+}
+
 .table__header-cell {
   padding: 16px;
   font-size: 13px;
